--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(':@react-native-community_art')
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
