--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,12 @@ target 'easyremedyApp' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+
   target 'easyremedyAppTests' do
     inherit! :complete
     # Pods for testing
