--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('easyremedyapp.keystore')
+            storePassword 'carlos08'
+            keyAlias 'easyremedyapp'
+            keyPassword 'carlos08'
+        }
     }
     buildTypes {
         debug {
@@ -155,7 +161,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
