--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,10 @@ target 'easyremedyApp' do
 
   pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'easyremedyAppTests' do
     inherit! :complete
     # Pods for testing
