--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
@@ -20,6 +21,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.0",
+    "react-native-sound": "git+https://github.com/Menardi/react-native-sound-gapless.git",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
